--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,37 +1,21 @@
 Package: gridExtra
-Maintainer: baptiste <baptiste.auguie@gmail.com>
+Authors@R: person("Baptiste", "Auguie",
+    email = "baptiste.auguie@gmail.com",
+    role = c("aut", "cre"))
 License: GPL (>= 2)
 Title: functions in Grid graphics
 Type: Package
-Author: Baptiste Auguie
-Description: misc. high-level Grid functions
-Version: 0.9.1
+Description: Miscellaneous functions for grid graphics
+Version: 1.0
 URL: https://github.com/baptiste/gridextra
 DOI: http://dx.doi.org/10.5281/zenodo.11422
-Date: 2012-09-08
+Roxygen: list(wrap = FALSE)
+Date: 2014-10-05
+Imports:
+    gtable
 Depends:
-    R(>= 2.5.0),
     grid
 Suggests:
     RGraphics,
-    pixmap,
-    EBImage,
     ggplot2,
     lattice
-Collate:
-    'arcText.r'
-    'arrange.r'
-    'barbedGrob.r'
-    'borderGrob.r'
-    'colorstripGrob.r'
-    'ebimage.r'
-    'ellipseGrob.r'
-    'gridExtra-package.r'
-    'grob-utils.r'
-    'polygon.regular.r'
-    'ngonGrob.r'
-    'patternGrob.r'
-    'pixmap.r'
-    'rpattern.r'
-    'stextGrob.r'
-    'tableGrob.r'
