--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,13 @@ export(grid.border)
 export(grid.ellipse)
 export(grid.ngon)
 export(grid.stext)
+export(grid.table)
 export(latticeGrob)
 export(marrangeGrob)
 export(ngonGrob)
 export(polygon_regular)
 export(stextGrob)
 export(tableGrob)
+export(ttheme_default)
+export(ttheme_minimal)
 import(gtable)
