--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,8 @@ export(ttheme_default)
 export(ttheme_minimal)
 import(grid)
 import(gtable)
+importFrom(grDevices,dev.interactive)
+importFrom(grDevices,dev.new)
 importFrom(grDevices,n2mfrow)
+importFrom(graphics,plot)
+importFrom(utils,modifyList)
