re-adding polygons and ellipse grob

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ S3method(drawDetails,lattice)
 S3method(grid.draw,arrangelist)
 S3method(print,arrangelist)
 export(arrangeGrob)
+export(ellipseGrob)
 export(grid.arrange)
+export(grid.ellipse)
+export(grid.ngon)
 export(grid.table)
 export(marrangeGrob)
+export(ngonGrob)
 export(tableGrob)
 export(ttheme_default)
 export(ttheme_minimal)
