--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(grid.ngon)
 export(grid.table)
 export(marrangeGrob)
 export(ngonGrob)
+export(polygon_regular)
 export(tableGrob)
 export(ttheme_default)
 export(ttheme_minimal)
