--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,14 @@ env:
     - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
 
 before_install:
+  ## PPA for Rcpp and some other packages
+  - sudo add-apt-repository -y ppa:edd/misc
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_r testthat knitr    RGraphics    pixmap    EBImage    ggplot2    lattice
+  - ./travis-tool.sh install_aptget r-cran-knitr r-cran-testthat r-cran-ggplot2 r-cran-gtable
 
 script: 
   - ./travis-tool.sh run_tests
