--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,9 @@ export(marrangeGrob)
 export(ngonGrob)
 export(polygon_regular)
 export(tableGrob)
+export(text_grob)
 export(ttheme_default)
-export(ttheme_minimal)
 import(grid)
 import(gtable)
-importFrom(grDevices,dev.interactive)
-importFrom(grDevices,dev.new)
 importFrom(grDevices,n2mfrow)
 importFrom(graphics,plot)
-importFrom(utils,modifyList)
