--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(polygon_regular)
 export(tableGrob)
 export(text_grob)
 export(ttheme_default)
+export(ttheme_minimal)
 import(grid)
 import(gtable)
 importFrom(grDevices,n2mfrow)
