--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(grid.arrange)
 export(grid.ellipse)
 export(grid.ngon)
 export(grid.table)
+export(gtable_align)
+export(gtable_join)
 export(marrangeGrob)
 export(ngonGrob)
 export(polygon_regular)
