only export the high-level functions from gtable
low-level functions should be kept internal to avoid interference with
other packages, and/or if the gtable package fixes them in the future

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,17 @@ S3method(drawDetails,lattice)
 S3method(grid.draw,arrangelist)
 S3method(print,arrangelist)
 export(arrangeGrob)
+export(cbind.gtable)
 export(ellipseGrob)
 export(grid.arrange)
 export(grid.ellipse)
 export(grid.ngon)
 export(grid.table)
-export(gtable_align)
-export(gtable_join)
+export(join)
 export(marrangeGrob)
 export(ngonGrob)
 export(polygon_regular)
+export(rbind.gtable)
 export(tableGrob)
 export(ttheme_default)
 export(ttheme_minimal)
