--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(drawDetails,lattice)
 S3method(grid.draw,arrangelist)
 S3method(print,arrangelist)
+S3method(str,gtable)
 export(arrangeGrob)
 export(cbind.gtable)
 export(ellipseGrob)
@@ -25,3 +26,4 @@ importFrom(grDevices,dev.new)
 importFrom(grDevices,n2mfrow)
 importFrom(graphics,plot)
 importFrom(utils,modifyList)
+importFrom(utils,str)
