join renamed combine

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,12 @@ S3method(print,arrangelist)
 S3method(str,gtable)
 export(arrangeGrob)
 export(cbind.gtable)
+export(combine)
 export(ellipseGrob)
 export(grid.arrange)
 export(grid.ellipse)
 export(grid.ngon)
 export(grid.table)
-export(join)
 export(marrangeGrob)
 export(ngonGrob)
 export(polygon_regular)
