--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 S3method(drawDetails,lattice)
 S3method(grid.draw,arrangelist)
 S3method(print,arrangelist)
+S3method(str,gtable)
 export(arrangeGrob)
 export(cbind.gtable)
+export(combine)
 export(ellipseGrob)
 export(grid.arrange)
 export(grid.ellipse)
@@ -24,3 +26,4 @@ importFrom(grDevices,dev.new)
 importFrom(grDevices,n2mfrow)
 importFrom(graphics,plot)
 importFrom(utils,modifyList)
+importFrom(utils,str)
