--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: Provides a number of user-level functions to work with "grid"
     tables.
 Version: 2.2.1
 URL: https://github.com/baptiste/gridextra
+BugReports: https://github.com/baptiste/gridextra/issues
 VignetteBuilder: knitr
 Imports:
     gtable,
