--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,7 @@ Type: Package
 Description: Provides a number of user-level functions to work with "grid"
     graphics, notably to arrange multiple grid-based plots on a page, and draw
     tables.
-Version: 2.2.1
-URL: https://github.com/baptiste/gridextra
-BugReports: https://github.com/baptiste/gridextra/issues
+Version: 2.3
 VignetteBuilder: knitr
 Imports:
     gtable,
@@ -22,7 +20,8 @@ Imports:
     utils
 Suggests:
     ggplot2,
+    egg,
     lattice,
     knitr,
     testthat
-RoxygenNote: 5.0.1.9000
+RoxygenNote: 6.0.1
