--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,17 +5,18 @@ S3method(grid.draw,arrangelist)
 S3method(print,arrangelist)
 S3method(str,gtable)
 export(arrangeGrob)
-export(cbind.gtable)
 export(combine)
 export(ellipseGrob)
 export(grid.arrange)
 export(grid.ellipse)
 export(grid.ngon)
 export(grid.table)
+export(gtable_cbind)
+export(gtable_combine)
+export(gtable_rbind)
 export(marrangeGrob)
 export(ngonGrob)
 export(polygon_regular)
-export(rbind.gtable)
 export(tableGrob)
 export(ttheme_default)
 export(ttheme_minimal)
